<resources>
    <string name="app_name" translatable="false">PresupuestApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lleva_tu_control_monetario_de_forma_ordenada_y_clara">Lleva tu control monetario de forma ordenada y clara.</string>
    <string name="te_damos_datos_para_que_ordenes_tus_ideas_financieras">Te damos datos para que ordenes tus ideas financieras</string>
    <string name="verifica_tus_datos_monetarios_miediante_precisos_reportes">Verifica tus datos monetarios miediante precisos reportes.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navegacion">Navegacion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string-array name="categoria">
        <item>Ahorro</item>
        <item>Gasto</item>
    </string-array>

    <string-array name="hora">
        <item>am</item>
        <item>pm</item>
    </string-array>

    <string-array name="tipo_Tarjeta">
        <item>Crédito</item>
        <item>Débito</item>
    </string-array>


    <string-array name="metodo_pago">
        <item>Efectivo</item>
        <item>Tarjeta</item>
    </string-array>


    <string-array name="meses_periodo">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="marca_tarjeta">
        <item>Visa</item>
        <item>MasterCard</item>
        <item>Citi</item>
        <item>Santander</item>
        <item>HSBC</item>
        <item>BAC Credomatic</item>
        <item>American Express</item>
        <item>Scotiabank</item>
        <item>Otros</item>
    </string-array>

    <string name="title_activity_reporte_resumen_gastos_tarjeta">Reporte_resumen_gastos_tarjeta </string>

    <string name="Comenzar">Comenzar</string>
    <string name="Registrar">Registrar</string>
    <string name="Derechos">Todos los derechos reservados</string>
    <string name="menuPrincipal">Menú Principal</string>
    <string name="edición_Categoría_egreso">Edición Categoría de egreso</string>
    <string name="detalle_presupuesto_mensual">Detalle presupuesto mensual</string>
    <string name="habilitar_período">Habilitar período</string>
    <string name="registro_Extra_ingreso">Registro Extra de ingreso</string>
    <string name="registro_Tarjetas">Registro Tarjetas</string>
    <string name="registro_egreso_mensual">Registro de egreso mensual</string>
    <string name="acerca">Acerca De</string>
    <string name="reportes">Reportes</string>
    <string name="Modificar">Modificar:</string>
    <string name="Eliminar">Eliminar:</string>
    <string name="Agregar">Agregar</string>

    <string name="titulo_edición_Categoría_egresos">Edición Categoría de egresos</string>
    <string name="titulo_detalle_Presupuesto_Mensual">Detalle Presupuesto Mensual</string>
    <string name="titulo_habilitar_período">Habilitar período</string>
    <string name="titulo_registro_Extraordinario_ingresos">Registro Extraordinario de ingresos</string>
    <string name="titulo_registro_Tarjetas">Registro Tarjetas </string>
    <string name="titulo_registro_egreso_mensual">Registro de egreso mensual</string>

    <string name="Mes">Mes:</string>
    <string name="Enero">Enero</string>
    <string name="Febrero">Febrero</string>
    <string name="Marzo">Marzo</string>
    <string name="Abril">Abril</string>
    <string name="Mayo">Mayo</string>
    <string name="Junio">Junio</string>
    <string name="Julio">Julio</string>
    <string name="Agosto">Agosto</string>
    <string name="Setiembre">Septiembre</string>
    <string name="Octubre">Octubre</string>
    <string name="Noviembre">Noviembre</string>
    <string name="Diciembre">Diciembre</string>

    <string name="identificador">Identificador:</string>
    <string name="Tipo">Tipo:</string>
    <string name="Egreso">Egreso:</string>
    <string name="Descripcion">Descripción:</string>

    <string name="tabla_identificador">Identificador</string>
    <string name="tabla_Tipo">Tipo</string>
    <string name="tabla_Egreso">Egreso</string>
    <string name="tabla_Descripcion">Descripción</string>
    <string name="tabla_Monto">Monto</string>

    <string name="Reset_Presupuesto">Reset Presupuesto</string>
    <string name="parla">Restablece en cero el ingreso mensual y limpia los tipos de egresos del presupuesto</string>
    <string name="Reset">Reset</string>
    <string name="incluir_ingreso_mes">Incluir Ingreso Mensual</string>
    <string name="incluir">Incluir</string>
    <string name="Monto">Monto:</string>
    <string name="incluir_Categorías_Egresos">Incluir Categorías de Egresos</string>
    <string name="categoría_egreso">Categoría de egreso:</string>

    <string name="parla2">Habilitar un período o mes para que se pueden registrar egresos</string>
    <string name="Habilitar">Habilitar</string>
    <string name="ingreso_Adicional">Ingreso Adicional</string>
    <string name="estado_Actual">ESTADO ACTUAL:</string>

    <string name="marca">Marca:</string>
    <string name="Numero">Número:</string>
    <string name="EntidadFinanciera">Entidad financiera:</string>
    <string name="tabla_marca">Marca</string>
    <string name="tabla_entidad">Entidad</string>
    <string name="tabla_tipo">Tipo</string>
    <string name="tabla_Numero">Numero</string>

    <string name="Fecha">Fecha:</string>
    <string name="Hora">Hora(opc):</string>
    <string name="local_Comercial">Local Comercial:</string>
    <string name="Metodo_pago">Metodo de pago:</string>
    <string name="factura"># Factura(opc):</string>

    <string name="Credito">Credito</string>
    <string name="Debito">Debito</string>
    <string name="Ahorro">Ahorro:</string>
    <string name="Gasto">Gasto:</string>

    <string name="Porcentajepresupuestado">Categoría de egreso :</string>
    <string name="Porcentajegastado">Porcentaje gastado:</string>

    <string name="Pago">Pago:</string>
    <string name="Factura">Factura:</string>
    <string name="Efectivo">Efectivo</string>
    <string name="Tarjeta">Tarjeta</string>
    <string name="Modalidad">Modalidad:</string>

    <string name="reporte_detalle_egresos">Detalle egresos</string>
    <string name="reporte_Balance_categoría_egreso">Balance por categoría de egreso</string>
    <string name="reporte_Porcentajes_egresos_categoría">Porcentajes de egresos por categoría</string>
    <string name="reporte_Resumen_gastos_tarjeta">Resumen de gastos por tarjeta</string>

    <string name="Seleccionar_Mes">Seleccionar Mes:</string>
    <string name="Categoria">Categoría</string>
    <string name="Presupuestado">Presupuestado</string>
    <string name="Gastado_Invertido">Gastado/Invertido</string>

    <string name="Buscar">Buscar</string>
    <string name="Limpiar">Limpiar</string>

    <string name="Porcentajepresupuestado2">% Presupuestado</string>
    <string name="Porcentajegastado2">% Gastado</string>
    <string name="Seleccionar_tarjeta">% Seleccionar Tarjeta:</string>
    <string name="Egresos_cancelados">% Egresos Cancelados</string>
    <string name="incluir_Ingreso_Mensual">Incluir Ingreso Mensual</string>

</resources>
