<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/edición_categoría_egreso"
            android:icon="@drawable/categoria_egreso"
            android:title="@string/edición_Categoría_egreso"/>
        <item
            android:id="@+id/detalle_presupuesto_mensual"
            android:icon="@drawable/presupuesto_mensual"
            android:title="@string/detalle_presupuesto_mensual"/>
        <item
            android:id="@+id/habilitar_período"
            android:icon="@drawable/habilitar"
            android:title="@string/habilitar_período"/>
        <item
            android:id="@+id/registro_extr_ingreso"
            android:icon="@drawable/ingreso_extra"
            android:title="@string/registro_Extra_ingreso"/>
        <item
            android:id="@+id/registro_tarjetas"
            android:icon="@drawable/tarjeta"
            android:title="@string/registro_Tarjetas"/>
        <item
            android:id="@+id/registro_egreso_mensual"
            android:icon="@drawable/egreso_mensual"
            android:title="@string/registro_egreso_mensual" />
    </group>

    <group>
        <item
            android:id="@+id/reportes"
            android:title="@string/reportes">
            <menu>
                <item
                    android:id="@+id/btn_reporte_detalle_egreos"
                    android:title="@string/reporte_detalle_egresos"
                    android:icon="@drawable/reporte_1"/>
                <item
                    android:id="@+id/btn_reporte_balance_por_categoria"
                    android:title="@string/reporte_Balance_categoría_egreso"
                    android:icon="@drawable/reporte_2"/>
                <item
                    android:id="@+id/btn_reporte_porcentaje_egreos_x_categoria"
                    android:title="@string/reporte_Porcentajes_egresos_categoría"
                    android:icon="@drawable/reporte_3"/>
                <item
                    android:id="@+id/reporte_resumen_gastos_x_tarjeta"
                    android:title="@string/reporte_Resumen_gastos_tarjeta"
                    android:icon="@drawable/reporte_4"/>
            </menu>
        </item>
    </group>
</menu>