<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeiro.presupuestapp.Reporte_balance_categoria_egreso">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reporte_Balance_categoría_egreso"
                    android:textColor="@color/colorFondo"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Seleccionar_Mes"
                    android:textColor="#000" />
                <Spinner
                    android:id="@+id/spinner_Reporte_Balance_Categoria_Egresos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text1"
                    android:entries="@array/meses_periodo"
                    android:layout_marginTop="14dp"
                    android:layout_alignLeft="@+id/text1"
                    android:layout_alignStart="@+id/text1" />
            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableLayout
                    android:id="@+id/listaReporteBalanceCategoriaEgresos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/borde_celda">
                    <TableRow
                        android:id="@+id/cabeceraListaReporteBalanceCategoriaEgresos"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/columnaReporteCategoria_Balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/borde_celda"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Categoria"
                            android:textColor="@color/colorFondo"
                            android:textSize="17sp" />
                        <TextView
                            android:id="@+id/columnaReportePresupuestado_Balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:background="@drawable/borde_celda"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Presupuestado"
                            android:textColor="@color/colorFondo"
                            android:textSize="17sp" />
                        <TextView
                            android:id="@+id/columnaReporteGastado_Balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/borde_celda"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Gastado_Invertido"
                            android:textColor="@color/colorFondo"
                            android:textSize="17sp" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
